--- a/Sales.Mobile/MainPage.xaml
+++ b/Sales.Mobile/MainPage.xaml
@@ -22,9 +22,9 @@
                 HorizontalOptions="Center" />
 
             <Label
-                Text="Welcome to .NET Multi-platform App UI"
+                Text="Welcome to Sharon Course"
                 SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
+                SemanticProperties.Description="Welcome Sharon Course"
                 FontSize="18"
                 HorizontalOptions="Center" />
 
